# sat-modulo-symmetries

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build-and-install-local.sh  build-and-install.sh  mkdocs.yml  pyproject.toml
cadical-internal-theory-propagation/: NEWS.md  VERSION
cadical-internal-theory-propagation/src/: analyze.cpp  assume.cpp  backtrack.cpp  cadical.hpp  collect.cpp  compact.cpp  decide.cpp  external.cpp  external.hpp  external_propagate.cpp  flags.cpp  internal.cpp  internal.hpp  lucky.cpp  mobical.cpp  propagate.cpp  queue.cpp  reduce.cpp  shrink.cpp  solver.cpp  stats.cpp  stats.hpp
cadical-internal-theory-propagation/test/api/: run.sh  theory_propagate.cpp
docs/: advanced.md  applications.md  examples.md  index.md  publications.md  reference.md  requirements.txt  team.md
docs/javascripts/: mathjax.js
encodings/: efl.py  efx.py  kochen_specker.py  planarity.py
encodings/examples/: example1.py  example2.py  example3.py  example4.py
nauty-propagator-testing/: CONSULT7_FOLLOW_UP_REVIEW.md  CONSULT7_REVIEW.md  README.md  cubic_connected_girth4_n10.cnf  cubic_connected_girth4_n12.cnf  cubic_connected_girth4_n14.cnf  cubic_connected_girth4_n16.cnf  cubic_connected_girth4_n18.cnf  cubic_connected_girth4_n20.cnf
pysms/: counters.py  decoder.py  graph_builder.py  incidince_matrix_builder.py  qcir_graph_builder.py  solver.py  sym_clause_checker.py
src/: CMakeLists.txt  cadical.hpp  cadicalSMS.cpp  cadicalSMS.hpp  clingoSMS.cpp  clingoSMS.hpp  coloring.cpp  coloring.h  coloringCheck.cpp  coloringCheck.hpp  connectedChecker.cpp  connectedChecker.hpp  connectedComponents.cpp  connectedComponents.h  cubing.cpp  decisionTree.cpp  decisionTree.hpp  decomposabilityCheck.cpp  decomposabilityCheck.hpp  domination.hpp  efx.cpp  efx.hpp  embeddabilityCheck.cpp  forbiddenSubgraph.cpp  forbiddenSubgraph.hpp  graph.cpp  graph.hpp  graphChecker.hpp  graphUtilities.cpp  graphUtilities.hpp  main.cpp  mainOldParsing.txt  minimalityCheck.cpp  minimalityCheck.hpp  minimalityCheckCommon.cpp  minimalityCheck_dir.cpp  options.cpp  options.hpp  planarity.cpp  planarity.hpp  (+19 more)
src/graphPropagators/: README.md  autcountChecker.cpp  autcountChecker.hpp  autcount_maximizer.cpp  autcount_maximizer.hpp  automorphism_counter.cpp  automorphism_counter.hpp  coloring.cpp  coloring.h  coloringCheck.cpp  coloringCheck.hpp  connectedChecker.cpp  connectedChecker.hpp  decomposabilityCheck.hpp  domination.cpp  domination.hpp  efx.hpp  graphUtilities.cpp  graphUtilities.hpp  planarity.cpp  planarity.hpp  subgraphIsomorphism.cpp  subgraphIsomorphism.hpp
src/other/: connectedComponents.cpp  connectedComponents.h  embeddabilityCheck.hpp  forbiddenSubgraph.cpp  forbiddenSubgraph.hpp
src/qbf/: qcirParser.cpp  universal.cpp  universal.hpp  universal2.cpp  universal2.hpp
